# soccer-utility

./: .gitignore  addAllPaths.m  connectRobot.m  initialize.m  loadRobot.m
soccer_msgs/darknet_ros_msgs/: package.xml
soccer_msgs/darknet_ros_msgs/msg/: BoundingBox.msg  BoundingBoxes.msg
soccer_msgs/humanoid_league_msgs/: package.xml
soccer_msgs/humanoid_league_msgs/msg/: GameState.msg  LineCircleInImage.msg  LineCircleRelative.msg  LineInformationRelative.msg  LineIntersectionInImage.msg  LineIntersectionRelative.msg  LineSegmentInImage.msg  RobotControlState.msg
soccer_msgs/soccer_msgs/: package.xml
soccer_msgs/soccer_msgs/msg/: RobotObstacleArray.msg
soccer_msgs/team_communication/: package.xml
