<?xml version="1.0"?>
<package>
  <name>darknet_ros_msgs</name>
  <version>1.1.3</version>
  <description>Darknet is an open source neural network framework that runs on CPU and GPU. You only look once (YOLO) is a state-of-the-art, real-time object detection system.</description>

  <build_depend>std_msgs</build_depend>

</package>
